# CPP-ArtificialNeuralNetworkGenerator

./: .clang-tidy  CMakeLists.txt  CPP-ArtificialNeuralNetworkGenerator.cpp  CPP-ArtificialNeuralNetworkGenerator.h  InputConfigFile.txt  ModuleTest.cpp  ModuleTest.ixx  README.md  Test.cpp  ToDo.txt  holder.txt
ANNConfigObject/: ANNConfigObject.cpp
ActivationFunctions/HiddenLayer/: ActivationFunctions.cpp  ActivationFunctions.h  ActivationFunctionsFactory.cpp  ActivationFunctionsFactory.h  HiddenLayer_ActivationFunctions.cpp  HiddenLayer_ActivationFunctions.h  HiddenLayer_ActivationFunctionsFactory.h
ActivationFunctions/OutputLayer/: OutputLayer_ActivationFunctions.cpp  OutputLayer_ActivationFunctions.h  OutputLayer_ActivationFunctionsFactory.h
ConfigClasses/ANNConfigurationObject/: ANNConfigObject.cpp  ANNConfigObject.h  ANNLayerObject.cpp
ConfigClasses/EnvironmentConfigurationObject/: EnvironmentConfigObject.cpp
ConfigClasses/HyperParameterConfigurationObject/: HyperParameterConfigObject.cpp
ConfigClasses/InstanceConfigurationObject/: InstanceConfigObject.h
Environment/: ANNEnvironemnt.cpp  ANNEnvironment.h
Environment/DirectionEnumeration/: DirectionalEnum.cpp  DirectionalEnum.h
Environment/EnvironmentNodes/StateBased/: StateBasedNode.cpp  StateBasedNode.h
Environment/EnvironmentObservtions/: StateBased2DEnvironmentObservation.cpp  StateBased2DEnvironmentObservation.h
Environment/EnvironmentObservtions/EnvironmentObservationStructs/: StateBasedObservationData.h
GeneratorStruct/: Generator.cpp
InputSanitizationChecks/: InputTypeChecking.cpp
PreProcessing/InputFileReadAndParse/: InputFileParse.cpp  InputFileParse.h  InputFileRead.cpp  InputFileRead.h
PreProcessing/InstanceConfigObject/ANNConfigurationObject/: ANNConfigObject.cpp  ANNConfigObject.h  ANNLayerObject.cpp  ANNLayerObject.h
PreProcessing/InstanceConfigObject/EnvironemntConfigurationObject/: EnvironmentConfigObject.cpp  EnvironmentConfigObject.h
PreProcessing/InstanceConfigObject/EnvironmentConfigurationObject/: EnvironmentConfigObject.cpp  EnvironmentConfigObject.h
PreProcessing/InstanceConfigObject/HyperParameterConfigurationObject/: HyperParameterConfigObject.cpp  HyperParameterConfigObject.h
PreProcessing/InstanceConfigObject/InstanceConfigurationObject/: InstanceConfigObject.cpp  InstanceConfigObject.h
PreProcessing/UnpackingToConfigurationObjects/: UnpackToConfigObjects.cpp  UnpackToConfigObjects.h
Staging/WorkItemGeneration/: WorkItem.cpp  WorkItem.h
Testing/ActivationFunctionTests/: ActivationFunctionFactoryTests.cpp  HiddenLayer_ActivationFunctionTests.cpp  Outputlayer_ActivationFunctionTests.cpp
Testing/EnvironmentObservationTools/StateBased2D/: StateBased2DTesting.cpp
Testing/EnvironmentTests/SightLineDataCollationTests/: SightLineTests.cpp
Testing/EnvironmentTests/StateBased2D/: StateBased2DTesting.cpp
Testing/EnvironmentTests/StateBasedEnvironmentTests/: StateBased2DEnvironmentTests.cpp
Testing/EnvironmentTests/SupportingEnvironmentTestFunctions/: StateBase2DTestEnvironmnetGeneration.cpp  SupportingTestFunctions.cpp
Testing/EnvironmentTests/TestEnvironmentGeneration/: StateBase2DTestEnvironmentGeneration.cpp
Testing/GeneratorTesting/: GeneratorFunctionalTesting.cpp
Testing/InputParsingTests/: ReadAndParseTesting.cpp
Testing/JSONUnpackingTests/: JSONUnpackingTesting.cpp
Testing/TypeFormattingTesting/: VectorFormattingTests.cpp
Testing/WeightHuristicsTests/: WeightHuristicsFunctionTests.cpp
TypeFormatting/: VectorFormatting.cpp
WeightHuristics/: WeightHuristics_Factory.h  WeightHuristics_Functions.cpp  WeightHuristics_Functions.h  WeightHuristics_GeneratorFactory.h
math/: add.cpp  add.ixx
